Fixed white background below the post drawer on mobile

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -10,6 +10,12 @@
 	z-index: z-index( 'root', '.is-group-editor::before' );
 }
 
+@include breakpoint( "<660px" ) {
+	.is-group-editor.focus-sidebar::before {
+		background-color: lighten( $gray, 30% );
+	}
+}
+
 .is-group-editor .wp-content {
 	padding: 0;
 }
